--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "katie-landing",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gulp-plumber": "^0.6.4"
+  },
   "devDependencies": {
     "connect": "^2.14.4",
     "connect-livereload": "^0.4.0",
